--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
@@ -291,7 +291,7 @@
     });
 
     $('.change.for_adres').on('click', function () {
-        $('.adres_fields').show();
+        $('.adres_fields').fadeToggle(300);
         $('#scrollbar2').tinyscrollbar({ sizethumb: 47 });
         $('#scrollbar3').tinyscrollbar({ sizethumb: 47 });
     });
