--- a/path/src/Insurance/ContentBundle/Resources/views/Form/callback_form.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Form/callback_form.html.twig
@@ -8,25 +8,25 @@
             {{form_row(callback_form.name)}}
             <div class="success ico"></div>
             <div class="error ico"></div>
-            <div class="error_text">Заполните поле</div>
+            <div class="error_text">Нужно заполнить</div>
         </div>
         <div class="control_point">
             {{form_row(callback_form.phoneNumber)}}
             <div class="success ico"></div>
             <div class="error ico"></div>
-            <div class="error_text">Заполните поле</div>
+            <div class="error_text">Нужно заполнить</div>
         </div>
         <div class="control_point">
             {{form_row(callback_form.email)}}
             <div class="success ico"></div>
             <div class="error ico"></div>
-            <div class="error_text">Заполните поле</div>
+            <div class="error_text">Нужно заполнить</div>
         </div>
         <div class="control_point">
             {{form_row(callback_form.timeToCall, {date_widget: 'string'})}}
             <div class="success ico"></div>
             <div class="error ico"></div>
-            <div class="error_text">Заполните поле</div>
+            <div class="error_text">Нужно заполнить</div>
         </div>
         <div class="control_point">
             <label>Комментарий:</label>
