--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/feedbackNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/feedbackNotification.html.twig
@@ -1,3 +1,5 @@
+<html>
+<body>
 Здравствуйте!
 На сайт поступил новый <b>{{feedbackTypeText}}</b>.
 <br/>
@@ -7,3 +9,5 @@
 {% if contact.phoneNumber %}<b>Контактный телефон:</b> {{contact.phoneNumber}}{% endif %}<br/>
 {% if contact.email %}<b>EMail:</b> {{contact.email}}{% endif %}<br/>
 {% if contact.question %}<b>Вопрос</b> {{contact.question}}{% endif %}
+</body>
+</html>
