--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/feedbackNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/feedbackNotification.html.twig
@@ -1,13 +1,9 @@
-<html>
-<body>
 Здравствуйте!
 На сайт поступил новый <b>{{feedbackTypeText}}</b>.
 <br/>
-<span style="font-size: 16px; font-style: italic; font-weight: bold;">Контактные данные для связи:</i>
-<b>Имя:</b> {{contact.name}}<br/>
-{% if contact.timeToCall %}<b>Время звонка:</b> {{contact.timeToCall}}{% endif %}<br/>
-{% if contact.phoneNumber %}<b>Контактный телефон:</b> {{contact.phoneNumber}}{% endif %}<br/>
-{% if contact.email %}<b>EMail:</b> {{contact.email}}{% endif %}<br/>
-{% if contact.question %}<b>Вопрос</b> {{contact.question}}{% endif %}
-</body>
-</html>
+<span style="font-size: 16px; font-style: italic; font-weight: bold;">Контактные данные для связи</span>
+<p><b>Имя:</b> {{contact.name}}</p>
+{% if contact.timeToCall %}<p><b>Время звонка:</b> {{contact.timeToCall}}</p>{% endif %}
+{% if contact.phoneNumber %}<p><b>Контактный телефон:</b> {{contact.phoneNumber}}</p>{% endif %}
+{% if contact.email %}<p><b>EMail:</b> {{contact.email}}</p>{% endif %}
+{% if contact.question %}<p><b>Вопрос</b> {{contact.question}}</p>{% endif %}
