--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/orderAdminNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/orderAdminNotification.html.twig
@@ -1,4 +1,9 @@
 Поступил заказ от клиента.
-Номер заказа: {{order.id}}
-Город: {{order.city}}
+
+Серия и номер полиса: {{order.id}}
+Начало действия полиса:
+Срок страхования:
+ФИО:
+Адрес: {{order.city}}
+
 Сумма: {{order.price + order.priceDgo + order.priceNs}} грн
