--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/unpayedOrderNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/unpayedOrderNotification.html.twig
@@ -1,30 +1,34 @@
-Уважаемый, {{order.firstname}}! 
+<p>Уважаемый, {{order.firstname}} {{order.middlename}}!</p>
 
-Прежде всего позвольте выразить Вам свою благодарность за оказанное доверие нашему сервису.
+<p>Прежде всего позвольте выразить Вам свою благодарность за оказанное доверие нашему сервису.</p>
 
-Вами успешно был оформлен заказ на {{siteDomain}}.
+<p>Вами успешно был оформлен заказ на PolisMarket.</p>
 
+<p>
 --------------------------
 Номер вашего заказа: {{order.id}}
 --------------------------
+</p>
 
-<b>Детальная информация по заказу:</b>
+<p><b>Детальная информация по заказу:</b></p>
+<p>Полис Автогражданки (ОСАГО) - {{order.price}} грн</p>
+<p>Разширение ответственности (ДГО) - {{order.priceDgo}} грн</p>
+<p>Здоровье водителя и пассажиров (НС) - {{order.priceNs}} грн</p>
 
-Полис Автогражданки (ОСАГО) - {{order.price}} грн
-Разширение ответственности (ДГО) - {{order.priceDgo}} грн ( +50000 грн )
-Здоровье водителя и пассажиров (НС) - 75,00 грн ( 3 пассажира )
+<p><b>Общая сумма Вашего заказа:</b> {{order.price + order.priceDgo + order.priceNs}} грн</p>
 
-<b>Общая сумма заказа:</b> {{order.price + order.priceDgo + order.priceNs}} грн
+<p>Наш партнер, обеспечивающий страховые обязательства: ЧАО «СК «БРОКБИЗНЕС».</p>
 
-Наш партнер, обеспечивающий страховые обязательства: ЧАО «СК «БРОКБИЗНЕС».
-
+<p>
 ------------------------------------------------------
 <b>Выбранный Вами способ оплаты:</b> Наличными курьеру
 ------------------------------------------------------
+<p>
 
-Наш менеджер свяжется с Вами в ближайшее время для уточнения деталей доставки.
+<p>Наш менеджер свяжется с Вами в ближайшее время для уточнения деталей доставки.</p>
 
-С уважением,
-{{siteName}},
-Email: {{contactEmail}}
+<p>С уважением,<br />
+{{siteName}},<br />
+Email: {{contactEmail}}<br />
 Тел.: {{contactPhone}}
+</p>
