--- a/path/src/Insurance/ContentBundle/Resources/public/css/style.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/style.css
@@ -1855,7 +1855,7 @@ form.personal_data {
     font-size: 18px;
     color: black;
     font-weight: 400!important;
-    margin: 0!important;
+    margin: 0;
     line-height: 41px;
     width: 150px!important;
     position: absolute;
