--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/orderAdminNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/orderAdminNotification.html.twig
@@ -1,9 +1,11 @@
 Поступил заказ от клиента.
 
 Серия и номер полиса: {{order.id}}
-Начало действия полиса:
-Срок страхования:
-ФИО:
-Адрес: {{order.city}}
-
+Начало действия полиса: {{order.activeFrom}}
+Срок страхования: {{order.id}}
+ФИО: {{order.id}} {{order.id}} {{order.id}}
+Адрес: {{order.city}} {{order.id}} {{order.id}}
+ОСАГО: {{order.id}}
+ДГО: {{order.id}}
+НС: {{order.id}}
 Сумма: {{order.price + order.priceDgo + order.priceNs}} грн
